fix flicker with fullscreen effects

BUG: 304375
FIXED-IN: 4.9.1
REVIEW: 106142